# y86_simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
asm_src/: asum.ys  basic_alu.ys  loop_cnt.ys
docs/: 01_hardware_entity.md  02_isa_reference.md  03_instruction_lifecycle.md  04_debug_trophies.md
include/: CPU.h  Memory.h  RegisterFile.h  Types.h
src/: CPU.cpp  Main.cpp
tools/: yas.py
